# GenSheet

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: authkey.rs  codes.rs  db.rs  error.rs  farm.rs  gacha.rs  game.rs  hoyolab.rs  main.rs
