[package]
name = "gensheet"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
dirs = "6"
md5 = "0.7"
rand = "0.8"
tauri-plugin-updater = "2.10.1"
